--- a/src/assets/components/About/Description/DescriptionAbout.scss
+++ b/src/assets/components/About/Description/DescriptionAbout.scss
@@ -59,3 +59,11 @@
       }
     }
   }
+  .description-content {
+    display: flex;
+    gap: 1rem;
+  
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+    }
+  }
