--- a/src/assets/components/home/Banner/Banner.scss
+++ b/src/assets/components/home/Banner/Banner.scss
@@ -6,7 +6,7 @@
     height: 223px;
     margin: auto;
     border-radius: 25px;
-    background-image: url("./src/assets/image/banner/banner01.png");
+    background-image: url("https://ucarecdn.com/f898e999-5744-43f3-adb6-ff1bea0dcc81/-/preview/500x500/-/quality/smart/-/format/auto/");
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
